--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "eslint-plugin-office-addins": "^2.1.5",
+    "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
-    "html-loader": "^4.1.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "office-addin-cli": "^1.5.5",
     "office-addin-debugging": "^5.0.5",
