--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/common": "^12.2.16",
     "@angular/compiler": "^12.2.16",
     "@angular/core": "^12.2.16",
+    "@angular/forms": "^12.2.16",
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@microsoft/office-js-helpers": "^1.0.1",
