--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "acorn": "^8.5.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.8.1",
     "eslint-plugin-office-addins": "^2.1.5",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
@@ -60,7 +61,9 @@
     "office-addin-prettier-config": "^1.2.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
+    "sass-loader": "^13.3.2",
     "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.1",
     "typescript": "^4.3.5",
     "webpack": "^5.76.3",
